An experiment to stop side nav from disappearing on mobile

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,5 +1,4 @@
 .sideNav {
-  display: none;
 }
 
 .main {
